--- a/Gesällprov/product.html
+++ b/Gesällprov/product.html
@@ -2,7 +2,7 @@
 <html lang="se">
     <head>
         <meta charset="utf-8">
-        <title>Register an account</title>
+        <title>Products</title>
         <link rel="stylesheet" href="style.css?rnd=12345">
     </head>
 
@@ -18,13 +18,7 @@
               </ul>
             </nav>
           </header>
-
-        <form method="POST" action="register.php">
-            <input type="text" name="username" placeholder="Username" required>
-            <input type="email" name="email" placeholder="E-mail" required>
-            <input type="password" name="password" placeholder="Password" required>
-            <button type="submit">Register</button>
-        </form>        
+                 
     </body>
 
     <footer>
