--- a/Gesällprov/login.html
+++ b/Gesällprov/login.html
@@ -3,13 +3,32 @@
     <head>
         <meta charset="utf-8">
         <title>Login</title>
+        <link rel="stylesheet" href="style.css?rnd=12345">
     </head>
 
     <body>
-        <form method="POST" action="login.php">
+        <header>
+            <nav>
+              <ul>
+                <li><a href="startpage.html">Home</a></li>
+                <li><a href="login.html">Login</a></li>
+                <li><a href="register.html">Register</a></li>
+                <li><a href="product.html">Products</a></li>
+                <li><a href="cart.html">Cart</a></li>
+              </ul>
+            </nav>
+          </header>
+
+
+        <form method="POST" action="login.php" id="loginform">
             <input type="email" name="email" placeholder="E-mail" required>
             <input type="password" name="password" placeholder="Password" required>
             <button type="submit">Login</button>
-        </form>              
+        </form>       
+        <p id="registernew">Don't have an account?<a href="register.html"> Register here!</a></p>       
     </body>
+
+    <footer>
+        <p>&copy; 2025 Anna E-Commerce LLC</p>
+      </footer>
 </html>
