--- a/Gesällprov/product.html
+++ b/Gesällprov/product.html
@@ -18,6 +18,10 @@
               </ul>
             </nav>
           </header>
+
+        <h1>Welcome to Our Cupcake Shop!</h1>
+        <p>Click below to see our delicious cupcakes:</p>
+        <a href="product.php">View Products</a>
                  
     </body>
 
