--- a/Gesällprov/startpage.html
+++ b/Gesällprov/startpage.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Välkommen till vår e-handel!</title>
+    <title>Anna E-Commerce LLC!</title>
     <link rel="stylesheet" href="style.css?rnd=12345">
   </head>
   <body>
@@ -18,8 +18,8 @@
       </nav>
     </header>
 
-    <h1>Välkommen till vår webbutik!</h1>
-    <p>Här kan du köpa de bästa produkterna.</p>
+    <h1>Welcome to Anna E-Commerce LLC</h1>
+    <p>Here you can buy the best cupcakes for a good price!</p>
 
     <footer>
       <p>&copy; 2025 Anna E-Commerce LLC</p>
