--- a/Gesällprov/login.html
+++ b/Gesällprov/login.html
@@ -13,7 +13,7 @@
                 <li><a href="startpage.html">Home</a></li>
                 <li><a href="login.html">Login</a></li>
                 <li><a href="register.html">Register</a></li>
-                <li><a href="product.html">Products</a></li>
+                <li><a href="product.php">Products</a></li>
                 <li><a href="cart.html">Cart</a></li>
               </ul>
             </nav>
