--- a/Gesällprov/startpage.html
+++ b/Gesällprov/startpage.html
@@ -12,7 +12,7 @@
         <ul>
           <li><a href="login.html">Login</a></li>
           <li><a href="register.html">Register</a></li>
-          <li><a href="product.html">Products</a></li>
+          <li><a href="product.php">Products</a></li>
           <li><a href="cart.html">Cart</a></li>
         </ul>
       </nav>
