--- a/Gesällprov/cart.html
+++ b/Gesällprov/cart.html
@@ -1,27 +1,31 @@
 <!doctype html>
 <html lang="se">
-    <head>
-        <meta charset="utf-8">
-        <title>Cart</title>
-        <link rel="stylesheet" href="style.css?rnd=12345">
-    </head>
+  <head>
+      <meta charset="utf-8">
+      <title>Cart</title>
+      <link rel="stylesheet" href="style.css?rnd=12345">
+  </head>
 
-    <body>
-        <header>
-            <nav>
-              <ul>
-                <li><a href="startpage.html">Home</a></li>
-                <li><a href="login.html">Login</a></li>
-                <li><a href="register.html">Register</a></li>
-                <li><a href="product.php">Products</a></li>
-                <li><a href="cart.html">Cart</a></li>
-              </ul>
-            </nav>
-          </header>
+  <body>
+    <header>
+        <nav>
+          <ul>
+            <li><a href="startpage.html">Home</a></li>
+            <li><a href="login.html">Login</a></li>
+            <li><a href="register.html">Register</a></li>
+            <li><a href="product.php">Products</a></li>
+            <li><a href="cart.php">Cart</a></li>
+          </ul>
+        </nav>
+    </header>
+
+
+    <h1>Your Cart</h1>
+    <!--===cart===-->
                
-    </body>
+  </body>
 
-    <footer>
-      <p>&copy; 2025 Anna E-Commerce LLC</p>
-    </footer>
+  <footer>
+    <p>&copy; 2025 Anna E-Commerce LLC</p>
+  </footer>
 </html>
