--- a/Gesällprov/login.html
+++ b/Gesällprov/login.html
@@ -14,7 +14,7 @@
                 <li><a href="login.html">Login</a></li>
                 <li><a href="register.html">Register</a></li>
                 <li><a href="product.php">Products</a></li>
-                <li><a href="cart.html">Cart</a></li>
+                <li><a href="cart.php">Cart</a></li>
               </ul>
             </nav>
           </header>
