--- a/Gesällprov/login.html
+++ b/Gesällprov/login.html
@@ -1,34 +1,36 @@
 <!doctype html>
 <html lang="se">
-    <head>
-        <meta charset="utf-8">
-        <title>Login</title>
-        <link rel="stylesheet" href="style.css?rnd=12345">
-    </head>
+  <head>
+    <meta charset="utf-8">
+      <title>Login</title>
+      <link rel="stylesheet" href="style.css?rnd=12345">
+  </head>
 
-    <body>
-        <header>
-            <nav>
-              <ul>
-                <li><a href="startpage.html">Home</a></li>
-                <li><a href="login.html">Login</a></li>
-                <li><a href="register.html">Register</a></li>
-                <li><a href="product.php">Products</a></li>
-                <li><a href="cart.php">Cart</a></li>
-              </ul>
-            </nav>
-          </header>
+  <body>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="startpage.php">Home</a></li>
+          <li><a href="login.php">Login</a></li>
+          <li><a href="register.php">Register</a></li>
+          <li><a href="product.php">Products</a></li>
+          <li><a href="cart.php">Cart</a></li>
+          <!--===logout===-->
+        </ul>
+      </nav>
+    </header>
 
 
-        <form method="POST" action="login.php" id="loginform">
-            <input type="email" name="email" placeholder="E-mail" required>
-            <input type="password" name="password" placeholder="Password" required>
-            <button type="submit">Login</button>
-        </form>       
-        <p id="registernew">Don't have an account?<a href="register.html"> Register here!</a></p>       
-    </body>
+    <!--===loginmessage===-->
+    <form method="POST" action="login.php" id="loginform">
+        <input type="email" name="email" placeholder="E-mail" required>
+        <input type="password" name="password" placeholder="Password" required>
+        <button type="submit">Login</button>
+    </form>       
+    <p id="registernew">Don't have an account?<a href="register.php"> Register here!</a></p>       
+  </body>
 
-    <footer>
-        <p>&copy; 2025 Anna E-Commerce LLC</p>
-      </footer>
+  <footer>
+    <p>&copy; 2025 Anna E-Commerce LLC</p>
+  </footer>
 </html>
