--- a/Gesällprov/product.html
+++ b/Gesällprov/product.html
@@ -1,20 +1,21 @@
 <!doctype html>
 <html lang="se">
     <head>
-        <meta charset="utf-8">
-        <title>Products</title>
-        <link rel="stylesheet" href="style.css?rnd=12345">
+      <meta charset="utf-8">
+      <title>Products</title>
+      <link rel="stylesheet" href="style.css?rnd=12345">
     </head>
 
     <body>
       <header>
         <nav>
           <ul>
-            <li><a href="startpage.html">Home</a></li>
-            <li><a href="login.html">Login</a></li>
-            <li><a href="register.html">Register</a></li>
+            <li><a href="startpage.php">Home</a></li>
+            <li><a href="login.php">Login</a></li>
+            <li><a href="register.php">Register</a></li>
             <li><a href="product.php">Products</a></li>
             <li><a href="cart.php">Cart</a></li>
+            <!--===logout===-->
           </ul>
         </nav>
       </header>
