--- a/Gesällprov/startpage.html
+++ b/Gesällprov/startpage.html
@@ -10,15 +10,17 @@
     <header>
       <nav>
         <ul>
-          <li><a href="login.html">Login</a></li>
-          <li><a href="register.html">Register</a></li>
+          <li><a href="login.php">Login</a></li>
+          <li><a href="register.php">Register</a></li>
           <li><a href="product.php">Products</a></li>
           <li><a href="cart.php">Cart</a></li>
+          <!--===logout===-->
         </ul>
       </nav>
     </header>
 
     <h1>Welcome to Anna E-Commerce LLC</h1>
+    <!--===message===-->
     <p>Here you can buy the best cupcakes for a good price!</p>
 
     <footer>
