--- a/Gesällprov/startpage.html
+++ b/Gesällprov/startpage.html
@@ -19,7 +19,7 @@
       </nav>
     </header>
 
-    <h1>Welcome to Anna E-Commerce LLC</h1>
+    <h1><!--===welcomeuser===--></h1>
     <!--===message===-->
     <p>Here you can buy the best cupcakes for a good price!</p>
 
