--- a/Gesällprov/product.html
+++ b/Gesällprov/product.html
@@ -21,7 +21,7 @@
       </header>
 
       <h1>Welcome to Our Cupcake Shop!</h1>
-      <p>Check out our delicious cupcakes below:</p>
+      <h3>Check out our delicious cupcakes below:</h3>
       
       <!--===entries===-->
 
