--- a/Gesällprov/startpage.html
+++ b/Gesällprov/startpage.html
@@ -21,7 +21,14 @@
 
     <h1><!--===welcomeuser===--></h1>
     <!--===message===-->
-    <p>Here you can buy the best cupcakes for a good price!</p>
+    <h3>Here you can buy the best customized cupcakes for a good price!</h3>
+    <strong>Instruction</strong>
+    <ol class="instruction">
+      <li>Create an account or log in to get started.</li>
+      <li>Head over to "Products" to browse and choose your favorite cupcakes.</li>
+      <li>Add a personal touch with a custom message during checkout!</li>
+    </ol>
+    <img src="cupcakes.png" alt="Cupcakes" class="cupcake-tower">
 
     <footer>
       <p>&copy; 2025 Anna E-Commerce LLC</p>
