--- a/Gesällprov/startpage.html
+++ b/Gesällprov/startpage.html
@@ -24,7 +24,7 @@
     <h3>Here you can buy the best customized cupcakes for a good price!</h3>
     
     <ol class="instruction">
-      <strong>Instruction</strong>
+      <strong>Instructions</strong>
       <li>Create an account or log in to get started.</li>
       <li>Head over to "Products" to browse and choose your favorite cupcakes.</li>
       <li>Add a personal touch with a custom message during checkout!</li>
