--- a/Gesällprov/startpage.html
+++ b/Gesällprov/startpage.html
@@ -7,29 +7,31 @@
     <link rel="stylesheet" href="style.css?rnd=12345">
   </head>
   <body>
-    <header>
-      <nav>
-        <ul>
-          <li><a href="login.php">Login</a></li>
-          <li><a href="register.php">Register</a></li>
-          <li><a href="product.php">Products</a></li>
-          <li><a href="cart.php">Cart</a></li>
-          <!--===logout===-->
-        </ul>
-      </nav>
-    </header>
+    <div class="page">
+      <header>
+        <nav>
+          <ul>
+            <li><a href="login.php">Login</a></li>
+            <li><a href="register.php">Register</a></li>
+            <li><a href="product.php">Products</a></li>
+            <li><a href="cart.php">Cart</a></li>
+            <!--===logout===-->
+          </ul>
+        </nav>
+      </header>
 
-    <h1><!--===welcomeuser===--></h1>
-    <!--===message===-->
-    <h3>Here you can buy the best customized cupcakes for a good price!</h3>
-    
-    <ol class="instruction">
-      <strong>Instructions</strong>
-      <li>Create an account or log in to get started.</li>
-      <li>Head over to "Products" to browse and choose your favorite cupcakes.</li>
-      <li>Add a personal touch with a custom message during checkout!</li>
-    </ol>
-    <img src="cupcakes.png" alt="Cupcakes" class="cupcake-tower">
+      <h1><!--===welcomeuser===--></h1>
+      <!--===message===-->
+      <h3>Here you can buy the best customized cupcakes for a good price!</h3>
+      
+      <ol class="instruction">
+        <strong>Instructions</strong>
+        <li>Create an account or log in to get started.</li>
+        <li>Head over to "Products" to browse and choose your favorite cupcakes.</li>
+        <li>Add a personal touch with a custom message during checkout!</li>
+      </ol>
+      <img src="cupcakes.png" alt="Cupcakes" class="cupcake-tower">
+    </div>
 
     <footer>
       <p>&copy; 2025 Anna E-Commerce LLC</p>
