--- a/Gesällprov/cart.html
+++ b/Gesällprov/cart.html
@@ -7,26 +7,29 @@
   </head>
 
   <body>
-    <header>
-      <nav>
-        <ul>
-          <li><a href="startpage.php">Home</a></li>
-          <li><a href="login.php">Login</a></li>
-          <li><a href="register.php">Register</a></li>
-          <li><a href="product.php">Products</a></li>
-          <li><a href="cart.php">Cart</a></li>
-          <!--===logout===-->
-        </ul>
-      </nav>
-    </header>
+    <div class="page">
+      <header>
+        <nav>
+          <ul>
+            <li><a href="startpage.php">Home</a></li>
+            <li><a href="login.php">Login</a></li>
+            <li><a href="register.php">Register</a></li>
+            <li><a href="product.php">Products</a></li>
+            <li><a href="cart.php">Cart</a></li>
+            <!--===logout===-->
+          </ul>
+        </nav>
+      </header>
 
 
-    <h1>Your Cart</h1>
-    <!--===cart===-->
-               
+      <h1>Your Cart</h1>
+      <div class="cart">
+        <!--===cart===-->
+      </div>
+    </div>
+       
+    <footer>
+      <p>&copy; 2025 Anna E-Commerce LLC</p>
+    </footer>
   </body>
-
-  <footer>
-    <p>&copy; 2025 Anna E-Commerce LLC</p>
-  </footer>
 </html>
