--- a/Gesällprov/login.html
+++ b/Gesällprov/login.html
@@ -7,30 +7,31 @@
   </head>
 
   <body>
-    <header>
-      <nav>
-        <ul>
-          <li><a href="startpage.php">Home</a></li>
-          <li><a href="login.php">Login</a></li>
-          <li><a href="register.php">Register</a></li>
-          <li><a href="product.php">Products</a></li>
-          <li><a href="cart.php">Cart</a></li>
-          <!--===logout===-->
-        </ul>
-      </nav>
-    </header>
+    <div class="page">
+      <header>
+        <nav>
+          <ul>
+            <li><a href="startpage.php">Home</a></li>
+            <li><a href="login.php">Login</a></li>
+            <li><a href="register.php">Register</a></li>
+            <li><a href="product.php">Products</a></li>
+            <li><a href="cart.php">Cart</a></li>
+            <!--===logout===-->
+          </ul>
+        </nav>
+      </header>
 
 
-    <!--===loginmessage===-->
-    <form method="POST" action="login.php" id="loginform">
-        <input type="email" name="email" placeholder="E-mail" required>
-        <input type="password" name="password" placeholder="Password" required>
-        <button type="submit">Login</button>
-    </form>       
-    <p id="registernew">Don't have an account?<a href="register.php"> Register here!</a></p>       
+      <!--===loginmessage===-->
+      <form method="POST" action="login.php" id="loginform">
+          <input type="email" name="email" placeholder="E-mail" required>
+          <input type="password" name="password" placeholder="Password" required>
+          <button type="submit">Login</button>
+      </form>       
+      <p id="registernew">Don't have an account?<a href="register.php"> Register here!</a></p>
+    </div>
+    <footer>
+      <p>&copy; 2025 Anna E-Commerce LLC</p>
+    </footer>
   </body>
-
-  <footer>
-    <p>&copy; 2025 Anna E-Commerce LLC</p>
-  </footer>
 </html>
