--- a/Gesällprov/register.html
+++ b/Gesällprov/register.html
@@ -7,29 +7,30 @@
   </head>
 
   <body>
-    <header>
-      <nav>
-        <ul>
-          <li><a href="startpage.php">Home</a></li>
-          <li><a href="login.php">Login</a></li>
-          <li><a href="register.php">Register</a></li>
-          <li><a href="product.php">Products</a></li>
-          <li><a href="cart.php">Cart</a></li>
-          <!--===logout===-->
-        </ul>
-      </nav>
-    </header>
+    <div class="page">
+      <header>
+        <nav>
+          <ul>
+            <li><a href="startpage.php">Home</a></li>
+            <li><a href="login.php">Login</a></li>
+            <li><a href="register.php">Register</a></li>
+            <li><a href="product.php">Products</a></li>
+            <li><a href="cart.php">Cart</a></li>
+            <!--===logout===-->
+          </ul>
+        </nav>
+      </header>
 
-    <!--===registermessage===-->
-    <form method="POST" action="register.php">
-      <input type="text" name="username" placeholder="Username" required>
-        <input type="email" name="email" placeholder="E-mail" required>
-        <input type="password" name="password" placeholder="Password" required>
-        <button type="submit">Register</button>
-    </form>        
+      <!--===registermessage===-->
+      <form method="POST" action="register.php">
+        <input type="text" name="username" placeholder="Username" required>
+          <input type="email" name="email" placeholder="E-mail" required>
+          <input type="password" name="password" placeholder="Password" required>
+          <button type="submit">Register</button>
+      </form> 
+    </div>
+    <footer>
+      <p>&copy; 2025 Anna E-Commerce LLC</p>
+    </footer>
   </body>
-
-  <footer>
-    <p>&copy; 2025 Anna E-Commerce LLC</p>
-  </footer>
 </html>
