--- a/Gesällprov/pay.html
+++ b/Gesällprov/pay.html
@@ -22,7 +22,9 @@
       </header>
 
       <h1>Order Summary</h1>
-      <!--===summary===-->
+      <div class="summary">
+        <!--===summary===-->
+      </div>
     </div>
     <footer>
       <p>&copy; 2025 Anna E-Commerce LLC</p>
