--- a/Gesällprov/product.html
+++ b/Gesällprov/product.html
@@ -29,7 +29,14 @@
         </section>
       </div>
 
+      <!-- Popup -->
+      <div id="popup">
+        <p id="popup-message">Product added to Cart!</p>
+        <button onclick="closePopup()">Close</button>
+      </div>
+
       <script src="scroll.js"></script>
+      <script src="popup.js"></script>
 
       <footer>
         <p>&copy; 2025 Anna E-Commerce LLC</p>
