--- a/Gesällprov/register.html
+++ b/Gesällprov/register.html
@@ -22,7 +22,8 @@
       </header>
 
       <!--===registermessage===-->
-      <form method="POST" action="register.php">
+      <h2>Create a new account</h2>
+      <form method="POST" action="register.php" id="registerform">
           <input type="text" name="username" placeholder="Username" required>
           <input type="email" name="email" placeholder="E-mail" required>
           <input type="password" name="password" placeholder="Password" required>
