--- a/Gesällprov/register.html
+++ b/Gesällprov/register.html
@@ -29,6 +29,7 @@
           <input type="password" name="password" placeholder="Password" required>
           <button type="submit">Register</button>
       </form> 
+      <p id="registernew">Already have an account?<a href="login.php"> Login here!</a></p>
     </div>
     <footer>
       <p>&copy; 2025 Anna E-Commerce LLC</p>
